--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,33 +1,46 @@
 .custom-button {
-    min-width: 165px;
-    width: auto;
-    height: 50px;
-    letter-spacing: 0.5px;
-    line-height: 50px;
-    padding: 0 35px 0 35px;
-    font-size: 15px;
-    background-color: black;
+  min-width: 165px;
+  width: auto;
+  height: 50px;
+  letter-spacing: 0.5px;
+  line-height: 50px;
+  padding: 0 35px 0 35px;
+  font-size: 15px;
+  background-color: black;
+  color: white;
+  text-transform: uppercase;
+  font-family: "Open Sans Condensed";
+  font-weight: bolder;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+  }
+
+  &.google-sign-in {
+    background-color: blue;
     color: white;
-    text-transform: uppercase;
-    font-family: 'Open Sans Condensed';
-    font-weight: bolder;
-    border: none;
-    cursor: pointer;
-  
+
     &:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
-    }
-
-    &.google-sign-in {
-      background-color: blue;
-      color: white;
-
-      &:hover{
-        border: none;
-        background-color: darkblue;
-      }
+      border: none;
+      background-color: darkblue;
     }
   }
-  
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    text-align: center;
+    padding-left: 50px;
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: none;
+    }
+  }
+}
